fixed code after review